# kvscf

./: .gitattributes  .gitignore  Cargo.toml  PLAN.md  README.md
.claude/skills/kvscf-add-app/: SKILL.md
.claude/skills/kvscf-window-title/: SKILL.md
.github/workflows/: ci.yml
assets/: NotoEmoji-kvscf.README.md  README.md
crates/kvscf/: Cargo.toml  build.rs
crates/kvscf-app/: Cargo.toml
crates/kvscf-app/src/: apps.rs  dock.rs  fonts.rs  lib.rs  probes.rs  remote.rs  rows.rs  settings.rs  single_instance.rs  theme.rs  userreg.rs  winset.rs
crates/kvscf-core/: Cargo.toml
crates/kvscf-core/src/: app.rs  enumerate.rs  focus.rs  lib.rs  parse.rs
crates/kvscf-local/: Cargo.toml
crates/kvscf-local/src/: main.rs
crates/kvscf/src/: dock.rs  main.rs
docs/: architecture.md  kdeskdash-vscode-mode.md  window-title-parsing.md
sprints/001-poc-scan-focus/: README.md
sprints/002-windows-app/: README.md
sprints/003-remote-kdeskdash/: README.md
sprints/004-save-restore-update-assist/: README.md
sprints/005-edge-research/: README.md
sprints/006-edge-tab/: README.md
sprints/007-apps-tab/: README.md
sprints/008-code-favorites/: README.md
sprints/009-dock-fullscreen/: README.md
sprints/010-emoji-fallback/: README.md
sprints/011-window-title-docs/: README.md
sprints/012-review-dry-core/: README.md
sprints/013-app-decomposition/: README.md
sprints/014-design-uplift/: README.md
sprints/015-docked-controls/: README.md
sprints/review/: 2026-07-20-review.md
