[workspace]
resolver = "2"
members = [
    "crates/kvscf-core",
    "crates/kvscf-app",
    "crates/kvscf",
    "crates/kvscf-local",
]
# kvscf-local is excluded from default builds: feature unification in a whole-workspace build
# would turn `remote` ON for the shared kvscf-app, so its binary would contain comms code.
# Build the comms-free artifact in isolation: `cargo build --release -p kvscf-local`.
default-members = [
    "crates/kvscf-core",
    "crates/kvscf-app",
    "crates/kvscf",
]

# Shipped exes get copied around (C:\tools\bin, kwork) — optimize for a small, symbol-free binary.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ken Hiatt <ken.hiatt@gmail.com>"]
repository = "https://github.com/kenhia/kvscf"
