[package]
name = "kvscf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for kvscf: enumerate VS Code / Insiders windows, parse titles, focus a chosen window."

[lib]
name = "kvscf_core"
path = "src/lib.rs"

[[bin]]
name = "kvscf-core"
path = "src/bin/cli.rs"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
] }
