[package]
name = "kvscf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "kvscf app: a tall/thin left-docked nav rail listing open VS Code windows; click to focus."

[[bin]]
name = "kvscf"
path = "src/main.rs"

[dependencies]
kvscf-core = { path = "../kvscf-core" }
eframe = { version = "0.29", features = ["persistence"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
