[package]
name = "kvscf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "kvscf app: a tall/thin left-docked nav rail listing open VS Code windows; click to focus."

[[bin]]
name = "kvscf"
path = "src/main.rs"

[dependencies]
kvscf-core = { path = "../kvscf-core" }
eframe = { version = "0.29", features = ["persistence"] }
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
