[package]
name = "kvscf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "kvscf — VS Code window focuser (full build, includes the kdeskdash remote channel)."

[[bin]]
name = "kvscf"
path = "src/main.rs"

# Default features → `remote` on: full build with the kdeskdash channel.
[dependencies]
kvscf-app = { path = "../kvscf-app" }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
